[package]
name = "libublk"
version = "0.1.2"
edition = "2021"
description = "Library for building linux block device in userspace"
authors = ["Ming Lei <tom.leiming@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ming1/libublk-rs"
license = "MIT OR Apache-2.0"
keywords = ["ublk", "io_uring", "userspace", "block", "storage"]
categories = [ "asynchronous", "filesystem" ]

publish = true

[badges]
maintenance = { status = "actively-developed" }

[features]
fat_complete = []

[[bin]]
name = "ublk_user_id"
path = "utils/ublk_user_id_rs.rs"

[package.metadata]
scripts = ["utils/ublk_chown.sh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
pkg-config = "0.3"
bindgen = "0.64"
regex = "1.8.3"
anyhow = {version = "1.0.66", features = ["default"]}

[dependencies]
libc = "0.2"
io-uring = "0.6.0"
serde = {version = "1.0.99", features = ["derive"]}
serde_json = "1.0.79"
bitmaps = "3.2.0"
log = {version = "0.4", features = ["release_max_level_off"]}
thiserror = "1.0.43"
derive_builder = "0.12"
futures = "0.3"

[dev-dependencies]
block-utils = "0.11.0"
tempfile = "3.6.0"
regex = "1.8.4"
anyhow = {version = "1.0.66", features = ["default"]}
clap = "4.3"
nix = "0.26.2"
ilog = "1.0.1"
async-std = {version = "1.12.0"}
ctrlc = "3.4.0"
daemonize = "0.5"
bitflags = "2.4.1"
