[package]
name = "libublk"
version = "0.4.1"
edition = "2021"
description = "Library for building linux block device in userspace"
authors = ["Ming Lei <tom.leiming@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ublk-org/libublk-rs"
license = "MIT OR Apache-2.0"
keywords = ["ublk", "io_uring", "userspace", "block", "storage"]
categories = [ "asynchronous", "filesystem" ]

publish = true

[badges]
maintenance = { status = "actively-developed" }

[features]
fat_complete = []

[[bin]]
name = "ublk_user_id"
path = "utils/ublk_user_id_rs.rs"

[package.metadata]
scripts = ["utils/ublk_chown.sh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69"
regex = "1.8.3"
anyhow = "1.0.66"

[dependencies]
libc = "0.2"
io-uring = {version="=0.7.4", features = ["bindgen", "overwrite"]}
serde = {version = "1.0.99", features = ["derive"]}
serde_json = "1.0.79"
bitmaps = "3.2.0"
log = "0.4"
thiserror = "1.0.43"
smol = "2.0.2"
slab = "0.4.9"
derive_setters = "0.1"
bitflags = "2.4.1"

[dev-dependencies]
block-utils = "0.11.0"
tempfile = "3.6.0"
regex = "1.8.4"
anyhow = "1.0.66"
clap = "4.3"
nix = "0.26.2"
ilog = "1.0.1"
daemonize = "0.5"
env_logger = "0.9"
futures = "0.3.31"
