[package]
name = "libublk"
version = "0.4.6"
edition = "2021"
rust-version = "1.80"
description = "Library for building linux block device in userspace"
authors = ["Ming Lei <tom.leiming@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ublk-org/libublk-rs"
license = "MIT OR Apache-2.0"
keywords = ["ublk", "io_uring", "userspace", "block", "storage"]
categories = [ "asynchronous", "filesystem" ]

publish = true

[badges]
maintenance = { status = "actively-developed" }

[features]
fat_complete = []

[[bin]]
name = "ublk_user_id"
path = "utils/ublk_user_id_rs.rs"

[package.metadata]
scripts = ["utils/ublk_chown.sh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# IMPORTANT: CARGO.TOML SECTION ORDERING
#
# Cargo expects the general, high-level sections (like [dependencies],
# [dev-dependencies], [build-dependencies], etc.) to be defined BEFORE
# any target-specific sections.
#
# If general dependency definitions are placed AFTER any
# [target.'cfg(...)'.dependencies] blocks, Cargo can misinterpret their scope,
# leading to unexpected errors (like dependencies only being available for
# a specific target, or incorrect feature merging).
#
# If you mess up the order, Cargo will make sure your build system spends a weekend
# wandering the dependency graph, wondering where it all went wrong, and you'll lose your hair
# trying to figure out why.
#
# 1. ALWAYS list ALL general [dependencies] first.
# 2. THEN, define ALL conditional [target.'cfg(...)'.dependencies] blocks.

[dependencies]
libublk-rs-sys = { path = "libublk-rs-sys", version = "0.1.0" }

libc = "0.2"
serde = {version = "1.0.99", features = ["derive"]}
serde_json = "1.0.79"
bitmaps = "3.2.0"
log = "0.4"
thiserror = "1.0.43"
smol = "2.0.2"
slab = "0.4.9"
derive_setters = "0.1"
bitflags = "2.4.1"
futures-timer = "3.0"
async-lock = "3.0"

[dev-dependencies]
ctor = "0.5"
block-utils = "0.11.0"
tempfile = "3.6.0"
regex = "1.8.4"
anyhow = "1.0.66"
clap = "4.3"
nix = "0.26.2"
ilog = "1.0.1"
daemonize = "0.5"
env_logger = "0.9"
futures = "0.3.31"
rand = "0.8"


# Put the conditional stuff at the bottom, order matters, see about comment
[target.'cfg(not(target_arch = "s390x"))'.dependencies]
io-uring = "^0.7"

[target.'cfg(target_arch = "s390x")'.dependencies]
io-uring = { version = "^0.7", features = ["bindgen"] }
