[package]
name = "libublk-rs-sys"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Low-level FFI bindings for Linux ublk (userspace block device) kernel interface"
authors = ["Ming Lei <tom.leiming@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ublk-org/libublk-rs"
license = "MIT OR Apache-2.0"
keywords = ["ublk", "ffi", "bindings", "userspace", "block"]
categories = ["external-ffi-bindings", "os::linux-apis"]

publish = true

[badges]
maintenance = { status = "actively-developed" }

[build-dependencies]
bindgen = "0.69"
regex = "1.8.3"
anyhow = "1.0.66"

[dependencies]
libc = "0.2"
serde = { version = "1.0.99", features = ["derive"] }
